Added wireframe images to the html document.

--- a/documentation/milestone-3.html
+++ b/documentation/milestone-3.html
@@ -36,6 +36,7 @@ wireframe images and some artistic background images for the coverflow/carousel-
 				already contained in the pages themselves (social media icons, affiliations, partners,
 				collaborations, etc.) The footer will be included on all page layouts for this site.</li>
 		</ul>
+		<img src="../images/homedesktop.jpg" alt="Desktop wireframe for the home page of lorchard.org" />
 
 		<!--HOME PAGE MOBILE VERSION-->
 
@@ -48,6 +49,7 @@ wireframe images and some artistic background images for the coverflow/carousel-
 			<li>The stack view shows a logo banner, an image with a Learn More link to the About page, followed
 				by stacked panels for each of the other pages.</li>
 		</ul>
+		<img src="../images/homemobile.jpg" alt="Mobile wireframe for the home page of lorchard.org" />
 
 		<!--WORK PAGE DESKTOP VERSION-->
 
@@ -60,6 +62,8 @@ wireframe images and some artistic background images for the coverflow/carousel-
 			<li>The portfolio boxes are Bootstrap components called <em>Thumbnails With Custom Content.</em></li>
 		</ul>
 
+		<img src="../images/workdesktop.jpg" alt="Desktop wireframe for the work page of lorchard.org" />
+
 		<!--WORK PAGE MOBILE VERSION-->
 
 		<h2>Work Page - mobile:</h2>
@@ -70,6 +74,8 @@ wireframe images and some artistic background images for the coverflow/carousel-
 			<li>The stack rows show the Thumbnail With Custom Content component with alternating left and
 				right positioning for visual interest.</li>
 		</ul>
+
+		<img src="../images/workmobile.jpg" alt="Mobile wireframe for the work page of lorchard.org" />
 
 	</body>
 </html>
