Added additional images to Milestone 3 html document.

--- a/documentation/milestone-3.html
+++ b/documentation/milestone-3.html
@@ -38,6 +38,15 @@ wireframe images and some artistic background images for the coverflow/carousel-
 		</ul>
 		<img src="../images/homedesktop.jpg" alt="Desktop wireframe for the home page of lorchard.org" />
 
+		<!--Samples of the type of coverflow/carousel images-->
+
+		<div class="photos">
+			<img src="../images/Collaboration_lorchard_website_flat.jpg" alt="Collaboration" />
+			<img src="../images/Consistency_lorchard_website_flat.jpg" alt="Consistency" />
+			<img src="../images/Detail_lorchard_website_flat.jpg" alt="Attention to Detail" />
+			<img src="../images/Intelligent_lorchard_website_flat.jpg" alt="Intelligent Design" />
+		</div>
+
 		<!--HOME PAGE MOBILE VERSION-->
 
 		<h2>Home Page - mobile:</h2>
