Trouble shooting photos.

--- a/documentation/milestone-3.html
+++ b/documentation/milestone-3.html
@@ -5,7 +5,7 @@ wireframe images and some artistic background images for the coverflow/carousel-
 <html>
 	<head lang="en">
 		<meta charset="UTF-8">
-		<link href="../css/milestone3_stylesheet.css" rel="stylesheet" type="text/css" />
+	<!--	<link href="../css/milestone3_stylesheet.css" rel="stylesheet" type="text/css" /> -->
 		<title>Milestone-2 for LOrchard.org</title>
 	</head>
 	<body>
