--- a/documentation/milestone-3.html
+++ b/documentation/milestone-3.html
@@ -38,14 +38,15 @@ wireframe images and some artistic background images for the coverflow/carousel-
 		</ul>
 		<img src="../images/homedesktop.jpg" alt="Desktop wireframe for the home page of lorchard.org" />
 
-		<!--Samples of the type of coverflow/carousel images-->
+		<!--Samples of the type of coverflow/carousel images
 
 		<div class="photos">
-			<img src="../images/Collaboration_lorchard_website_flat_sm.jpg" alt="Collaboration" />
-			<img src="../images/Consistency_lorchard_website_flat_sm.jpg" alt="Consistency" />
-			<img src="../images/Detail_lorchard_website_flat_sm.jpg" alt="Attention to Detail" />
-			<img src="../images/Intelligent_lorchard_website_flat_sm.jpg" alt="Intelligent Design" />
+			<img src="../images/Collaboration_lorchard_website_green_sm.jpg" alt="Collaboration" />
+			<img src="../images/Adaptive_lorchard_website__sm.jpg" alt="Adaptive" />
+			<img src="../images/Attention_lorchard_website_sm.jpg" alt="Attention to Detail" />
+			<img src="../images/Persistencet_lorchard_website_sm.jpg" alt="Persistence" />
 		</div>
+		-->
 
 		<!--HOME PAGE MOBILE VERSION-->
 
