Commented out photo styles on css stylesheet

--- a/documentation/milestone-3.html
+++ b/documentation/milestone-3.html
@@ -13,7 +13,7 @@ wireframe images and some artistic background images for the coverflow/carousel-
 		<h1>Laura Orchard Personal Website Project - Milestone III</h1>
 		<p>
 			Created by: 	Laura Orchard<br />
-			Created for: 	Deep Dive Coding Bootcamp, PWP Project Milestone II<br />
+			Created for: 	Deep Dive Coding Bootcamp, PWP Project Milestone III<br />
 			Date:		May 9, 2015<br />
 			URL:		http://lorchard.org
 		</p>
