Figure caption elements on css stylesheet.

--- a/documentation/milestone-3.html
+++ b/documentation/milestone-3.html
@@ -36,7 +36,10 @@ wireframe images and some artistic background images for the coverflow/carousel-
 				already contained in the pages themselves (social media icons, affiliations, partners,
 				collaborations, etc.) The footer will be included on all page layouts for this site.</li>
 		</ul>
+		<figure>
 		<img src="../images/homedesktop.jpg" alt="Desktop wireframe for the home page of lorchard.org" />
+		<figcaption>Image 1: Home Page Desktop Layout</figcaption>
+		</figure>
 
 		<!--Samples of the type of coverflow/carousel images
 
@@ -59,7 +62,10 @@ wireframe images and some artistic background images for the coverflow/carousel-
 			<li>The stack view shows a logo banner, an image with a Learn More link to the About page, followed
 				by stacked panels for each of the other pages.</li>
 		</ul>
+		<figure>
 		<img src="../images/homemobile.jpg" alt="Mobile wireframe for the home page of lorchard.org" />
+			<figcaption>Image 2: Home Page Mobile Layout</figcaption>
+		</figure>
 
 		<!--WORK PAGE DESKTOP VERSION-->
 
@@ -71,8 +77,10 @@ wireframe images and some artistic background images for the coverflow/carousel-
 			<li>The banner and footer are part of the site template.</li>
 			<li>The portfolio boxes are Bootstrap components called <em>Thumbnails With Custom Content.</em></li>
 		</ul>
-
+		<figure>
 		<img src="../images/workdesktop.jpg" alt="Desktop wireframe for the work page of lorchard.org" />
+			<figcaption>Image 3: Work Page Desktop Layout</figcaption>
+		</figure>
 
 		<!--WORK PAGE MOBILE VERSION-->
 
@@ -84,8 +92,9 @@ wireframe images and some artistic background images for the coverflow/carousel-
 			<li>The stack rows show the Thumbnail With Custom Content component with alternating left and
 				right positioning for visual interest.</li>
 		</ul>
-
+		<figure>
 		<img src="../images/workmobile.jpg" alt="Mobile wireframe for the work page of lorchard.org" />
-
+			<figcaption>Image 4: Work Page Mobile Layout</figcaption>
+		</figure>
 	</body>
 </html>
