Deleted all additional photos.

--- a/documentation/milestone-3.html
+++ b/documentation/milestone-3.html
@@ -44,10 +44,10 @@ wireframe images and some artistic background images for the coverflow/carousel-
 		<!--Samples of the type of coverflow/carousel images
 
 		<div class="photos">
-			<img src="../images/Collaboration_lorchard_website_green_sm.jpg" alt="Collaboration" />
-			<img src="../images/Adaptive_lorchard_website__sm.jpg" alt="Adaptive" />
-			<img src="../images/Attention_lorchard_website_sm.jpg" alt="Attention to Detail" />
-			<img src="../images/Persistencet_lorchard_website_sm.jpg" alt="Persistence" />
+			<img src="../images/new_photo.jpg" alt="Collaboration" />
+			<img src="../images/new_photo2.jpg" alt="Adaptive" />
+			<img src="../images/new_photo3.jpg" alt="Attention to Detail" />
+			<img src="../images/new_photo4.jpg" alt="Persistence" />
 		</div>
 		-->
 
