Replaced screenshots of wireframe.

--- a/documentation/milestone-3.html
+++ b/documentation/milestone-3.html
@@ -31,7 +31,7 @@ wireframe images and some artistic background images for the coverflow/carousel-
 				incorporated into the banner container for simplicity. The banner will be included on all
 				page layouts for this site.</li>
 			<li>The coverflow/carousel in the center of the page will have text overlays on top of
-				imagery - the text is informational, the imagery is artistic.</li>
+				imagery - the text is informational, the imagery is artistic (my own photos).</li>
 			<li>The three borderless text boxes in the footer will contain information that is not
 				already contained in the pages themselves (social media icons, affiliations, partners,
 				collaborations, etc.) The footer will be included on all page layouts for this site.</li>
