--- a/documentation/milestone-3.html
+++ b/documentation/milestone-3.html
@@ -102,5 +102,11 @@ wireframe images and some artistic background images for the coverflow/carousel-
 				<figcaption>Image 4: Work Page Mobile Layout</figcaption>
 			</figure>
 		</figure>
+		<figure role="group">
+			<figure>
+				<img src="../images/rikeryar.jpg" alt="Gratuitous Star Trek image" />
+				<figcaption>Plus one for gratuitous Riker-Yar image.</figcaption>
+			</figure>
+		</figure>
 	</body>
 </html>
