--- a/documentation/milestone-3.html
+++ b/documentation/milestone-3.html
@@ -105,7 +105,7 @@ wireframe images and some artistic background images for the coverflow/carousel-
 		<figure role="group">
 			<figure>
 				<img src="../images/rikeryar.jpg" alt="Gratuitous Star Trek image" />
-				<figcaption>Plus one for gratuitous Riker-Yar image.</figcaption>
+				<figcaption>Plus one for gratuitous Riker-Yar image..?</figcaption>
 			</figure>
 		</figure>
 	</body>
