--- a/documentation/homepage.html
+++ b/documentation/homepage.html
@@ -50,14 +50,16 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<a class="navbar-brand" href="#">Project name</a>
+							<a class="navbar-brand" href="#">Laura O</a>
 						</div>
 						<div id="navbar" class="navbar-collapse collapse">
 							<ul class="nav navbar-nav">
 								<li class="active"><a href="#">Home</a></li>
 								<li><a href="#about">About</a></li>
+								<li><a href="#about">Work</a></li>
+								<li><a href="#about">Services</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<li class="dropdown">
+								<!--<li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
 									<ul class="dropdown-menu" role="menu">
 										<li><a href="#">Action</a></li>
@@ -67,7 +69,7 @@
 										<li class="dropdown-header">Nav header</li>
 										<li><a href="#">Separated link</a></li>
 										<li><a href="#">One more separated link</a></li>
-									</ul>
+									</ul> -->
 								</li>
 							</ul>
 						</div>
