--- a/documentation/homepage.html
+++ b/documentation/homepage.html
@@ -10,7 +10,7 @@
 		<link type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet"/>
 
 		<!-- Optional Bootstrap theme -->
-		<link type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css" rel="stylesheet"/>
+		<!--<link type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css" rel="stylesheet"/>
 
 		<!-- ////////////////////////////////////////////////
 		 //// LINK TO YOUR CUSTOM CSS FILES HERE
@@ -44,7 +44,8 @@
 				<nav class="navbar navbar-inverse navbar-static-top">
 					<div class="container">
 						<div class="navbar-header">
-							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+							<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
+									  aria-expanded="false" aria-controls="navbar">
 								<span class="sr-only">Toggle navigation</span>
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
@@ -91,30 +92,30 @@
 			</ol>
 			<div class="carousel-inner" role="listbox">
 				<div class="item active">
-					<img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+					<img class="first-slide" src="../images/purplebackground.jpg" alt="Purple sky...">
 					<div class="container">
 						<div class="carousel-caption">
-							<h1>Example headline.</h1>
+							<h1>Prepare to be amazed.</h1>
 							<p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-							<p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+							<!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p> -->
 						</div>
 					</div>
 				</div>
 				<div class="item">
-					<img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+					<img class="second-slide" src="../images/BWbackground.jpg" alt="Everything is connected.">
 					<div class="container">
 						<div class="carousel-caption">
-							<h1>Another example headline.</h1>
-							<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-							<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+							<h1>Yes, everything IS connected.</h1>
+							<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p>
+							<!--<p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p> -->
 						</div>
 					</div>
 				</div>
 				<div class="item">
-					<img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+					<img class="third-slide" src="../images/Greenbackground.jpg" alt="Grass is always greener.">
 					<div class="container">
 						<div class="carousel-caption">
-							<h1>One more for good measure.</h1>
+							<h1>And here is the green one.</h1>
 							<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
 							<p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
 						</div>
