--- a/lib/head-utils.html
+++ b/lib/head-utils.html
@@ -9,7 +9,7 @@
 <link type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css" rel="stylesheet"/>
 
 <!-- Custom CSS -->
-<link type="text/css" href="css/style.css" rel="stylesheet"/>
+<link type="text/css" href="../css/style.css" rel="stylesheet"/>
 
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,4 +28,4 @@
 <script type="text/javascript" src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
 <!--This is your custom JavaScript-->
-<script type="text/javascript" src="js/scripts.js"></script>
+<script type="text/javascript" src="../js/scripts.js"></script>
