--- a/lib/footer.html
+++ b/lib/footer.html
@@ -4,7 +4,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-12">
-				<p>Footer here.</p>
+				<p>Website by Laura O</p>
 			</div>
 		</div>
 	</div>
