--- a/lib/header.html
+++ b/lib/header.html
@@ -11,16 +11,17 @@
 				</button>
 
 				<!--header branding for md and lg screens-->
-				<a class="navbar-brand hidden-xs hidden-sm" href="/">This is your logo on large screens</a>
+				<a class="navbar-brand hidden-xs hidden-sm" href="/">Laura Orchard</a>
 
 				<!--header branding for xs and sm screens-->
-				<a class="navbar-brand visible-xs-block visible-sm-block" href="/">logo for small screens</a>
+				<a class="navbar-brand visible-xs-block visible-sm-block" href="/">Laura Orchard</a>
 
 			</div>
 			<div class="collapse navbar-collapse" id="navbar-collapsed">
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="#">Home</a></li>
 					<li><a href="#">About</a></li>
+					<li><a href="#">Services</a></li>
 					<li><a href="#">Contact</a></li>
 				</ul>
 			</div>
