Updated all 4 pages with content and styles.

--- a/lib/header.html
+++ b/lib/header.html
@@ -11,10 +11,10 @@
 				</button>
 
 				<!--header branding for md and lg screens-->
-				<a class="navbar-brand hidden-xs hidden-sm" href="/">Laura Orchard</a>
+				<a class="navbar-brand hidden-xs hidden-sm" href="../images/LauraOrchardCommandLogosm.png" alt-text="Laura Orchard"></a>
 
 				<!--header branding for xs and sm screens-->
-				<a class="navbar-brand visible-xs-block visible-sm-block" href="/">Laura Orchard</a>
+				<a class="navbar-brand visible-xs-block visible-sm-block" href="../images/LauraOrchardCommandLogo.png" alt-text="Laura Orchard"></a>
 
 			</div>
 			<div class="collapse navbar-collapse" id="navbar-collapsed">
