--- a/lib/header.html
+++ b/lib/header.html
@@ -21,6 +21,7 @@
 				<ul class="nav navbar-nav navbar-right">
 					<li><a href="http://lorchard.org/documentation/index.php">Home</a></li>
 					<li><a href="http://lorchard.org/documentation/services-page.php">Services</a></li>
+					<li><a href="http://lorchard.org/documentation/work-page.php">Work</a></li>
 					<li><a href="http://lorchard.org/documentation/about-page.php">About</a></li>
 					<li><a href="http://lorchard.org/documentation/contact-page.php">Contact</a></li>
 				</ul>
