--- a/lib/header.html
+++ b/lib/header.html
@@ -19,7 +19,7 @@
 			</div>
 			<div class="collapse navbar-collapse" id="navbar-collapsed">
 				<ul class="nav navbar-nav navbar-right">
-					<li><a href="http://lorchard.org/documentation/index.php">Home</a></li>
+					<li><a href="http://lorchard.org/index.php">Home</a></li>
 					<li><a href="http://lorchard.org/documentation/services-page.php">Services</a></li>
 					<li><a href="http://lorchard.org/documentation/work-page.php">Work</a></li>
 					<li><a href="http://lorchard.org/documentation/about-page.php">About</a></li>
