Working on form validation and email submission process

--- a/lib/head-utils.html
+++ b/lib/head-utils.html
@@ -29,4 +29,4 @@
 
 <!--This is your custom JavaScript-->
 <script type="text/javascript" src="../js/scripts.js"></script>
-<script type="text/javascript" scr="../js/thankyou-script.js"></script>
+<script type="text/javascript" scr="../js/form-script.js"></script>
